# gtk3-example

./: .gitignore  CMakeLists.txt  Makefile  README.md  glade-example.glade  glade-example.glade~  gtk3-example.code-workspace
inc/: gui.h
resources/: glade-example.glade~  resources.xml
src/: glade-example.glade  gui.c  help.txt  main.c  resources.c
tests/: example-test.cxx
